build/log/idf_py_stdout_output_7012
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\EMY\ESP_workspace\firebase_deneme\build\bootloader\esp-idf\esptool_py && python D:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/EMY/ESP_workspace/firebase_deneme/build/bootloader/bootloader.bin"
Bootloader binary size 0x6860 bytes. 0x7a0 bytes (7%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
ccache D:\Espressiff\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20230928\xtensa-esp-elf\bin\xtensa-esp32-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.2.2-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/EMY/ESP_workspace/firebase_deneme/build/config -ID:/EMY/ESP_workspace/firebase_deneme/main -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/newlib/platform_include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/config/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/config/include/freertos -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/config/xtensa/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/FreeRTOS-Kernel/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/freertos/esp_additions/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/esp_hw_support/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/esp_hw_support/include/soc -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/esp_hw_support/include/soc/esp32 -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/esp_hw_support/port/esp32/. -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/heap/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/log/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/soc/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/soc/esp32 -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/soc/esp32/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/hal/platform_port/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/hal/esp32/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/hal/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/esp_rom/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/esp_rom/include/esp32 -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/esp_rom/esp32 -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/esp_common/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/esp_system/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/esp_system/port/soc -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/esp_system/port/include/private -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/xtensa/esp32/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/xtensa/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/xtensa/deprecated_include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/include/apps -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/include/apps/sntp -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/lwip/src/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/port/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/port/freertos/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/port/esp32xx/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/port/esp32xx/include/arch -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/lwip/port/esp32xx/include/sys -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/esp_wifi/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/esp_wifi/wifi_apps/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/esp_event/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/esp_phy/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/esp_phy/esp32/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/esp_netif/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/esp_http_client/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/nvs_flash/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/spi_flash/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/esp_partition/include -ID:/EMY/ESP_workspace/firebase_deneme/managed_components/espressif__mpu6050/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/driver/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/driver/deprecated -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/driver/analog_comparator/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/driver/dac/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/driver/gpio/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/driver/gptimer/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/driver/i2c/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/driver/i2s/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/driver/ledc/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/driver/mcpwm/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/driver/parlio/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/driver/pcnt/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/driver/rmt/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/driver/sdio_slave/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/driver/sdmmc/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/driver/sigma_delta/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/driver/spi/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/driver/temperature_sensor/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/driver/touch_sensor/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/driver/twai/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/driver/uart/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/driver/usb_serial_jtag/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/driver/touch_sensor/esp32/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/esp_pm/include -ID:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2/components/esp_ringbuf/include -ID:/EMY/ESP_workspace/firebase_deneme/managed_components/zorxx__dht -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/EMY/ESP_workspace/firebase_deneme=. -fmacro-prefix-map=D:/Espressiff/Espressif/frameworks/esp-idf-v5.2.2=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c D:/EMY/ESP_workspace/firebase_deneme/main/main.c
D:/EMY/ESP_workspace/firebase_deneme/main/main.c: In function 'app_main':
D:/EMY/ESP_workspace/firebase_deneme/main/main.c:284:5: error: 'roll' may be used uninitialized [-Werror=maybe-uninitialized]
  284 |     sprintf(json_data, "{\"fields\":{\"roll\":{\"doubleValue\":%d},\"pitch\":{\"doubleValue\":%d}}}",roll, pitch);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
D:/EMY/ESP_workspace/firebase_deneme/main/main.c:262:12: note: 'roll' was declared here
  262 |     int8_t roll;
      |            ^~~~
D:/EMY/ESP_workspace/firebase_deneme/main/main.c:284:5: error: 'pitch' may be used uninitialized [-Werror=maybe-uninitialized]
  284 |     sprintf(json_data, "{\"fields\":{\"roll\":{\"doubleValue\":%d},\"pitch\":{\"doubleValue\":%d}}}",roll, pitch);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
D:/EMY/ESP_workspace/firebase_deneme/main/main.c:263:12: note: 'pitch' was declared here
  263 |     int8_t pitch;
      |            ^~~~~
cc1.exe: some warnings being treated as errors
ninja: build stopped: subcommand failed.
